--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-requests
-boto3
-dnspython
-tldextract
-lxml
-bs4
-colorama
+requests==2.31.0
+boto3==1.34.104
+dnspython==2.3.0
+tldextract==5.1.2
+lxml==5.2.2
+bs4==0.0.2
+colorama==0.4.6
